--- a/includes/templates/responsive_classic/css/stylesheet.css
+++ b/includes/templates/responsive_classic/css/stylesheet.css
@@ -127,11 +127,11 @@ select#country, .wrapperAttribsOptions select{height:40px;}
 #navCatTabs li:hover{color:#fff;}
 /*top ezpages links*/
 #navEZPagesTop {margin:0;background:#666;color:#ffffff;width:100%;}
-#navEZPagesTop ul {font-size:0;text-align:center;overflow:hidden;}
-#navEZPagesTop li {font-size:0.75rem;display: inline-block;margin-top:0;border-left: 1px solid #555;}
+.pagination ul, #navEZPagesTop ul {font-size:0;text-align:center;overflow:hidden;}
+.pagination li, #navEZPagesTop li {font-size:0.75rem;display: inline-block;margin-top:0;border-left: 1px solid #555;}
 #navEZPagesTop ul li:last-child{border-right:1px solid #555;}
-#navEZPagesTop li a {color: #fff;text-decoration: none;padding: 1.2em 1.0em;display: block;}
-#navEZPagesTop li a:hover {background:#777;}
+.pagination li a, #navEZPagesTop li a {color: #fff;text-decoration: none;padding: 1.2em 1.0em;display: block;}
+.pagination li a:hover, #navEZPagesTop li a:hover {background:#777;}
 /*breadcrumbs*/
 #navBreadCrumb {margin:0;padding:0.5em;}
 #navBreadCrumb a{text-decoration:none;}
@@ -419,3 +419,4 @@ h2.greeting a:hover{color:#666;}
 .paypal-button-hidden {
     visibility: hidden;
 }
+
